--- a/GI/Character/Osanshouo.html
+++ b/GI/Character/Osanshouo.html
@@ -2,7 +2,7 @@
 <html lang="ja">
     <head>
         <meta charset="UTF-8">
-        <title>私設世界線遊戯システムS式/オオサンショウウオ</title>
+        <title>私設世界線遊戯システムS式/GI/Charactorオオサンショウウオ</title>
         <link rel="stylesheet" href="SWRS-S.css">
     </head>
     <body>
@@ -65,4 +65,5 @@
             <div class="margin"></div>
         </div>
     </body>
+
 </html>
