--- a/GI/Character/Osanshouo.html
+++ b/GI/Character/Osanshouo.html
@@ -2,7 +2,7 @@
 <html lang="ja">
     <head>
         <meta charset="UTF-8">
-        <title>私設世界線遊戯システムS式/GI/Charactorオオサンショウウオ</title>
+        <title>私設世界線遊戯システムS式/GI/Characterオオサンショウウオ</title>
         <link rel="stylesheet" href="SWRS-S.css">
     </head>
     <body>
@@ -67,3 +67,4 @@
     </body>
 
 </html>
+
