Update HTML structure and stylesheet link

--- a/ZZZ/Bangboo/Tenhyonichirusaika.html
+++ b/ZZZ/Bangboo/Tenhyonichirusaika.html
@@ -2,8 +2,8 @@
 <html lang="ja">
     <head>
         <meta charset="UTF-8">
-        <title>私設世界線遊戯システムS式/テンヒョウニチルサイカ</title>
-        <link rel="stylesheet" href="SWRS-S.css">
+        <title>私設世界線遊戯システムS式/ZZZ/Bangboo/テンヒョウニチルサイカ</title>
+        <link rel="stylesheet" href="/SWRS-S.css">
     </head>
     <body>
         <div class="full">
@@ -30,4 +30,5 @@
             <div class="margin"></div>
         </div>
     </body>
+
 </html>
