--- a/SWRS-S.html
+++ b/SWRS-S.html
@@ -10,12 +10,12 @@
             <div class="titlebox">
                 <div class="swrs_s_text">私設世界線遊戯システムS式</div>
             </div>
-            <a href="GI/Character/Osanshouo.html">
+            <a href="Osanshouo.html">
                 <div class="databox">
                     <div class="title">オオサンショウウオ</div>
                 </div>
             </a>
-            <a href="ZZZ/Bangboo/Tenhyonichirusaika.html">
+            <a href="Tenhyonichirusaika.html">
                 <div class="databox">
                     <div class="title">テンヒョウニチルサイカ</div>
                 </div>
@@ -25,3 +25,4 @@
     </body>
 
 </html>
+
