--- a/Tenhyonichirusaika.html
+++ b/Tenhyonichirusaika.html
@@ -27,6 +27,25 @@
                 <div class="title">C：？？？</div>
                 <div class="ex">物理属性ダメージを大量に与える。</div>
             </div>
+            <div class="databox">
+                <div class="title">ストーリー</div>
+            </div>
+            <div class="databox">
+                <div class="title">初めまして…</div>
+                <div class="ex">形式番号03、テンヒョウニチルサイカ。私の前に01や02がいたわけではなく、そういう名前なので気にしないでください。</div>
+            </div>
+            <div class="databox">
+                <div class="title">テンヒョウニチルサイカ自身について…</div>
+                <div class="ex">テンヒョウニチルサイカ。これってどこの国の言葉なんでしょうね？何か意味があるようでないようで…。<br>あの人がつけた名前ですし、深い理由はないかもしれませんが…気に入っていますよ。</div>
+            </div>
+            <div class="databox">
+                <div class="title">アンビーについて…</div>
+                <div class="ex">映画を観ていると、少しだけ表情が変わるんです。その少しがとても優しくて、安心します。<br>また一緒に映画を観られるといいですね。<br>テン先生と呼ばれるのはちょっとむず痒いですが…アンビーがそう呼びたいなら構いません。<br>あ…もしかしてこれって、しゅがーさんが誰彼構わず「なんとか先生」と呼ぶ癖を真似しているんでしょうか？うーん…</div>
+            </div>
+            <div class="databox">
+                <div class="title">好きな食べ物…</div>
+                <div class="ex">生まれが特殊なこともあってか、何が好きかというより食べること自体が好きなんだと思います。<br>強いて挙げるならラーメンでしょうか。しゅがーさんがよく食べているので私も自然と好きになっていました。<br>「ラーメンは液体だから手軽に食べられる」と言ってたのはよくわかりませんが…。</div>
+            </div>
             <div class="margin"></div>
         </div>
     </body>
