--- a/Tenhyonichirusaika.html
+++ b/Tenhyonichirusaika.html
@@ -40,7 +40,7 @@
             </div>
             <div class="databox">
                 <div class="title">アンビーについて…</div>
-                <div class="ex">映画を観ていると、少しだけ表情が変わるんです。その少しがとても優しくて、安心します。<br>また一緒に映画を観られるといいですね。<br>テン先生と呼ばれるのはちょっとむず痒いですが…アンビーがそう呼びたいなら構いません。<br>あ…もしかしてこれって、しゅがーさんが誰彼構わず「なんとか先生」と呼ぶ癖を真似しているんでしょうか？うーん…</div>
+                <div class="ex">映画を観ていると、少しだけ表情が変わるんです。その少しがとても優しくて、安心します。<br>また一緒に映画を観られるといいですね。<br>テン先生と呼ばれるのはちょっとむず痒いですが…アンビーがそう呼びたいなら構いません。<br>あ…もしかしてこれって、しゅがーさんが誰彼構わず「なんとか先生」と呼ぶ癖を真似しているんでしょうか？うーん…。</div>
             </div>
             <div class="databox">
                 <div class="title">好きな食べ物…</div>
@@ -50,3 +50,4 @@
         </div>
     </body>
 </html>
+
